--- a/package.json
+++ b/package.json
@@ -1,7 +1,29 @@
 {
   "name": "react-top-modal",
+  "author": "Zinédine MESSAHEL <zinedinemessahel@hotmail.com>",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "keywords": [
+    "react",
+    "react-component",
+    "modal",
+    "overlay",
+    "react-modal",
+    "react-portal",
+    "portal",
+    "front-end"
+],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ZinedineMess/react-top-modal"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
@@ -15,7 +37,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,5 +58,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-env": "^2.4.1",
+    "babel-preset-env": "^1.7.0"
   }
 }
