feat: update package.json

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "portal",
     "front-end"
 ],
+"homepage": "https://github.com/ZinedineMess/react-top-modal/tree/main#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/ZinedineMess/react-top-modal"
