--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "portal",
     "front-end"
 ],
-"homepage": "https://github.com/ZinedineMess/react-top-modal/tree/main#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/ZinedineMess/react-top-modal"
@@ -39,6 +38,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
+    "build-front-end": "BUILD_PATH='./doc' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
