--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-portal",
     "portal",
     "front-end"
-],
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/ZinedineMess/react-top-modal"
@@ -61,8 +61,9 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-env": "^2.4.1",
-    "babel-preset-env": "^1.7.0"
+    "@babel/polyfill": "^7.12.1",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0"
   }
 }
