--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-top-modal",
   "author": "Zinédine MESSAHEL <zinedinemessahel@hotmail.com>",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "license": "MIT",
   "private": false,
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/index.jsx",
+  "module": "dist/index.jsx",
   "files": [
     "dist",
     "README.md"
@@ -27,12 +27,15 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^12.8.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -64,6 +67,9 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0"
+    "@babel/preset-env": "^7.15.0",
+    "@testing-library/dom": "^8.10.1",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2"
   }
 }
