docs: update packagejson

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-top-modal",
-  "author": "Zinédine MESSAHEL <zinedinemessahel@hotmail.com>",
-  "version": "0.1.13",
+  "author": "Zinédine MESSAHEL",
+  "version": "0.1.14",
+  "description": "React component to easily create customizable modals",
   "license": "MIT",
   "private": false,
   "main": "dist/index.js",
@@ -10,6 +11,7 @@
     "dist",
     "README.md"
   ],
+  "homepage": "https://silly-morse-f7ef99.netlify.app",
   "keywords": [
     "react",
     "react-component",
@@ -39,7 +41,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
-    "build-front-end": "BUILD_PATH='./doc' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
